# bedit2

./: .clang-format  .gitignore  README.mkd  com.bwhmather.Bedit.desktop.in  com.bwhmather.Bedit.gschema.xml  com.bwhmather.Bedit2.gschema.xml  meson.build
bedit/: bedit-application-actions.c  bedit-application-actions.h  bedit-application-shortcuts.c  bedit-application-shortcuts.h  bedit-application.c  bedit-application.h  bedit-application.vala  bedit-button-group.vala  bedit-close-confirmation-dialog.vala  bedit-diff-gutter-renderer.vala  bedit-diff.vala  bedit-document-actions.vala  bedit-document.c  bedit-document.h  bedit-document.vala  bedit-file-dialog-filter-view.vala  bedit-file-dialog-icon-view.vala  bedit-file-dialog-list-view.vala  bedit-file-dialog-tree-view.vala  bedit-file-dialog.vala  bedit-file-thumbnail.vala  bedit-fonts.vala  bedit-preferences-window.vala  bedit-searchbar.c  bedit-searchbar.h  bedit-searchbar.vala  bedit-statusbar.vala  bedit-style-scheme-chooser-row.vala  bedit-tab-view.vala  bedit-toolbar-view.vala  bedit-toolbar.vala  bedit-window-actions.c  bedit-window-actions.h  bedit-window.c  bedit-window.h  bedit-window.vala  brk-main.vala  main.c
bedit/resources/: bedit.gresources.xml
bedit/resources/gtk/: menus.ui
bedit/resources/ui/: bedit-close-confirmation-dialog.ui  bedit-document.ui  bedit-file-dialog-filter-view.ui  bedit-file-dialog-icon-view.ui  bedit-file-dialog-list-view.ui  bedit-file-dialog-tree-view.ui  bedit-file-dialog.ui  bedit-preferences-window.ui  bedit-searchbar.ui  bedit-statusbar.ui  bedit-tab-page-tab.ui  bedit-tab.ui  bedit-window.ui
subprojects/bricks/: meson.build  meson_options.txt
subprojects/bricks/src/: bricks.h  brk-indicator-bin-private.h  brk-indicator-bin.c  brk-tab-bar-private.h  brk-tab-bar.c  brk-tab-box.c  brk-tab-button.c  brk-tab-button.h  brk-tab-private.h  brk-tab-view-private.h  brk-tab-view.c  brk-tab-view.h  brk-tab.c  brk-widget-utils-private.h  brk-widget-utils.c  meson.build
subprojects/bricks/src/resources/: bricks.gresources.xml
subprojects/bricks/src/resources/ui/: brk-tab-bar.ui  brk-tab-button.ui  brk-tab.ui
tests/lint/: bedit_lint.py  test_exact_includes.py  test_include_guards.py  test_no_circular_includes.py  test_source_and_header_contents_match.py  test_source_and_header_orders_match.py  test_source_heading.py  test_unused_symbols.py
